# mminer

./: .cache  .env  .gitignore  .mocharc.yml  Dockerfile  Mistcoin.README.txt  README.md  bitcoin.conf  package-lock.json  package.json  sample-bchd.conf  sample.bchd.conf.txt  tsconfig.json  tslint.json
Mistcoin-archive/: Mistcoin.md  readme.md
fastmine/: .gitignore  CMakeLists.txt  README.md  fastmine.cpp
fastmine/config/: CMakeLists.txt
fastmine/crypto/: CMakeLists.txt  common.h  cpuid.h  endian.h  sha256.cpp  sha256.h  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse41.cpp
scripts/: optimize_nips.ts  sha256.sh
spedn/: slp-miner-reward-v0.spedn  slp-miner-reward-v1.spedn  slp-miner-reward-v2.spedn  slp-miner-reward-v3.spedn
src/: cache.ts  generateV1.ts  init.ts  miner.ts
txid-cache/maze/: .cache
txid-cache/mist/: .cache
